# tauri-shadcn-vite

./: biome.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: providers.tsx  theme-customizer.tsx  theme-styles.tsx  theme-wrapper.tsx
src/hooks/: useConfig.ts  useThemeConfig.ts
src/lib/: charts.ts  themes.ts
src/registry/: registry-base-color.ts  registry-styles.ts
src/store/: ThemeProvider.tsx
